--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
   "dependencies": {
     "clsx": "^2.1.1",
     "framer-motion": "^11.13.3",
+    "mini-svg-data-uri": "^1.4.4",
     "next": "15.0.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "tailwind-merge": "^2.5.5"
+    "tailwind-merge": "^2.5.5",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@types/node": "^20",
